# emotesbot

./: .env.example  .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  pom.xml
.github/workflows/: deploy.yml  test.yml
emotes/: emotes.go  emotes.json
handler/: inline.go
src/: inline.rs  main.rs
src/main/java/me/mattrick/emotesbot/: EmotesBot.java
src/main/java/me/mattrick/emotesbot/listener/: InlineListener.java
src/main/java/me/mattrick/emotesbot/updater/: Updater.java
src/main/resources/: emotes.json  emotes.txt
