[package]
name = "emotesbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
teloxide = "0.5.2"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.7"
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.25"
